WebContent/styles/screenerPage.css
body {
	font-family: 'Nunito', sans-serif;
	color: rgb(255, 255, 255);
	background-color: black;
}

h1 {
	text-align: right;
	margin-right: 15px;
	color: rgb(182, 193, 224);
	font-size: 50px;
}

h2 {
	margin-left: 5%;
	color: rgb(182, 193, 224);
}

#border {
	width: 100%;
	height: 1px;
	background: rgb(127, 127, 127);
}

.pageContent{
	width: 75%;
	margin: 0 auto;
}

.screenerForm{
	margin-top: 100px;
}

input[type=number] {
    -webkit-appearance: none;  
 	width: 20%;
    height: 75px;
    box-sizing: content-box;
    font-size: 30px;
	font-family: 'Nunito', sans-serif;
    padding: 0 0 0 25px;
    border: 0;
    background-color: #232938;
    color: white;
}

.submitButton {
    font-size: 25px;
	font-family: 'Nunito', sans-serif;
    background-color: #003344;
    color: white;
    width: 22%;
    height: 75px;
    border-width: 0;
    padding: 5px 0;
}

.searchResults{
	margin-top: 50px;
}

.searchResult{
	background-color: #94A5D1;
	padding: 20px;
	font-size: 30px;
	margin: 15px 0;
}

.searchResult:hover{
	background-color: #B4C1E3;
	transition: .25s;
	cursor: pointer;
}

.stockName{
	float: right;
}

